--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -1,21 +1,12 @@
-<%= form_for(@team) do |f| %>
-  <% if @team.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@team.errors.count, "error") %> prohibited this team from being saved:</h2>
 
-      <ul>
-      <% @team.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<%= semantic_form_for @team do |f| %>
+    <%= f.inputs :name, :logo %>
+    <%= f.semantic_fields_for :players do |player| %>
+        <%= player.inputs :name, :email_adress %>
+        <%= player.semantic_fields_for :characters %>
+        <%= player.inputs :characters>
+    <% end %>
+    <%= f.actions %>
 <% end %>
+
