--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -14,15 +14,6 @@ logo:<%= image_tag @team.logo %>
 
 
 
-
-<%= form_for @team, :html => { :multipart => true } do |form| %>
-  <%= form.file_field :logo %>
-  <%= form.submit %>
-<% end %>
-
-
-
-
 <h2>Events</h2>
 <table>
   <thead>
@@ -34,7 +25,7 @@ logo:<%= image_tag @team.logo %>
 
   <tbody>
 
-  <% @events.each do |event| %>
+  <% @team.events.each do |event| %>
       <tr>
         <td><%= event.name %></td>
         <td><%= link_to 'Show', event %></td>
@@ -56,7 +47,7 @@ logo:<%= image_tag @team.logo %>
 
   <tbody>
 
-  <% @players.each do |player| %>
+  <% @team.players.each do |player| %>
       <tr>
         <td><%= player.name %></td>
         <td><%= link_to 'Show', player%></td>
@@ -76,7 +67,7 @@ logo:<%= image_tag @team.logo %>
 
   <tbody>
 
-  <% @characters.each do |character| %>
+  <% @team.characters.each do |character| %>
       <tr>
         <td><%= character.name %></td>
         <td><%= #link_to 'Show', event
@@ -86,17 +77,4 @@ logo:<%= image_tag @team.logo %>
   <% end %>
   </tbody>
 </table>
-
-
-
-<%= semantic_form_for @team do |f| %>
-    <%= f.inputs :name, :logo %>
-    <%= f.semantic_fields_for :players do |player| %>
-        <%= player.inputs :name, :email_adress %>
-        <%= player.semantic_fields_for :characters do |character| %>
-            <%= character.inputs :name%>
-        <% end %>
-    <% end %>
-    <%= f.actions %>
-<% end %>
 
