before resources testing

--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -15,6 +15,7 @@
 %>
 
 <h2>characters</h2>
+<%= link_to 'show characters', team_player_characters_path(@player.team,@player) %>
 <table>
   <thead>
   <tr>
