--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -4,10 +4,14 @@
     <%= f.inputs do %>
         <%= f.input :name, validate:true %>
         <%= f.semantic_fields_for :players do |player| %>
-            <%= player.inputs :name, :email_adress, validate:true %>
-            <%= player.semantic_fields_for :characters do |character| %>
-                <%= character.inputs :name %>
-    
+            <%= player.inputs do %>
+                <%=  player.input  :name, validate:true%>
+                <%=  player.input  :email_adress%>
+                <%= player.semantic_fields_for :characters do |character| %>
+                    <%= character.inputs do %>
+                        <%= character.input :name, validate:true%>
+                    <% end %>
+                <% end %>
             <% end %>
         <% end %>
     <% end %>
