--- a/app/views/teams/_character_fields.html.erb
+++ b/app/views/teams/_character_fields.html.erb
@@ -1,4 +1,4 @@
-<div class="nested-fields">
+<%= content_tag :div, class: "nested-fields" do %>
 
 
     <%= f.inputs do %>
@@ -6,4 +6,4 @@
         <%= link_to_remove_association "remove", f%>
     <% end %>
 
-</div>
+<% end %>
