--- a/app/views/teams/_player_fields.html.erb
+++ b/app/views/teams/_player_fields.html.erb
@@ -1,5 +1,4 @@
-
-<div class="nested-fields">
+<%= content_tag :div, class: "nested-fields"  do%>
     <%= f.inputs do %>
 
         <%=  f.input  :name, validate:true%>
@@ -8,9 +7,9 @@
             <%=  f.semantic_fields_for :characters do |character| %>
                 <%= render 'character_fields', f:character %>
             <% end%>
-       <div>
+        <%= content_tag :div do %>
             <%= link_to_add_association 'add character', f, :characters %>
             <%= link_to_remove_association "remove player", f%>
-        </div>
+        <% end %>
     <% end %>
-</div>
+<% end %>
