--- a/app/views/teams/_character_fields.html.erb
+++ b/app/views/teams/_character_fields.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag :div, class: "nested-fields" do %>
+<%= content_tag :div, class: 'nested-fields', style: 'margin-left: 2cm;' do %>
 
 
     <%= f.inputs do %>
