--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -11,6 +11,7 @@
         <%=@team.country.name%>
     </p>
 <% end %>
+<%= link_to 'Delete', team_path(@team), method: :delete, data: { confirm: 'Are you sure?' }  %> |
 <%= link_to 'Edit', edit_team_path(@team) %> |
 <%= link_to 'Back', teams_path %>
 
@@ -50,18 +51,7 @@ logo:<%= image_tag @team.logo %>
   </tr>
   </thead>
 
-  <tbody>
 
-  <% @team.events.each do |event| %>
-      <tr>
-        <%= render 'event_fields.html.erb', event:event %>
-      </tr>
-  <% end %>
-  </tbody>
-</table>
-<%= Formtastic::Inputs::SelectInput  :country_id, collection: Hash[Country.all.map{|b| [b.name,b.id]}] %>
-<span class="btn btn-default add-event" />dodaj</span>
-</div>
 
 <h2>Players</h2>
 <p><%= @team.name %> have <%= pluralize(@team.players.count , 'player')%></p>
