--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,41 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+
+
 <%= content_tag :div, class: 'container' do %>
+
+
+
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">Zadanie1</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+
+            <li <% if params[:controller]=='teams' then %>class="active"<% end %>><a href="<%= teams_path %>">show teams
+              <% if params[:controller]=='teams' then %><span class="sr-only">(current)</span> <% end %></a></li>
+
+            <li><a href="<%= events_path %>">show events</a></li>
+            <li><a href="<%= countries_path %>">show countries</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
+
   <%= content_tag :div, class: 'row' do %>
     <%=    content_tag :div, class: 'col-lg-12' do %>
         <%= yield %>
