--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -12,10 +12,9 @@
     <% @teams.each do |team| %>
       <tr>
         <td><%= team.name %></td>
-        <td><%= link_to 'Show', team %></td>
+        <td><%= link_to 'Show', team, class: :btn %></td>
         <td><%= link_to 'Edit', edit_team_path(team) %></td>
         <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <td><%= team.events.inspect %></td>
       </tr>
     <% end %>
   </tbody>
