A little bit of bootstrap but still doesnt work like it should

--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Listing Countries</h1>
+<div class="page-header">  <h1>Listing Events </h1></div>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
@@ -12,9 +12,9 @@
     <% @countries.each do |country| %>
       <tr>
         <td><%= country.name %></td>
-        <td><%= link_to 'Show', country %></td>
-        <td><%= link_to 'Edit', edit_country_path(country) %></td>
-        <td><%= link_to 'Destroy', country, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', country, class: 'btn btn-default' %></td>
+        <td><%= link_to 'Edit', edit_country_path(country), class: 'btn btn-default' %></td>
+        <td><%= link_to 'Destroy', country, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
       </tr>
     <% end %>
   </tbody>
