--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,11 +10,17 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
-
- *= require formtastic-bootstrap
  *
  */
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "scaffolds.css.scss";
+@import "formtastic-bootstrap";
+
+/*
+*=
+*/
+
+
+
