--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -13,7 +13,7 @@
 <%= link_to 'Destroy', @country, method: :delete, data: { confirm: 'Are you sure?' } %>
 
 <h2>Teams</h2>
-<table>
+<table class="table">
   <thead>
   <tr>
     <th>Name</th>
