--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,9 +8,9 @@
 
 
 
-<%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Back', events_path %>|
-<%= link_to 'Destroy', @event, method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= link_to 'Edit', edit_event_path(@event), class: 'btn btn-link' %> |
+<%= link_to 'Back', events_path , class: 'btn btn-link'%>|
+<%= link_to 'Destroy', @event, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-link', style: 'color:#FF0000' %>
 
 <h2>Events</h2>
 <table>
