--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -5,7 +5,7 @@
 
 
 
-<table>
+<table class="table">
   <thead>
   <tr>
     <th>Name</th>
@@ -18,7 +18,7 @@
   <% @team.players.each do |player| %>
       <tr>
         <td><%= player.name %></td>
-        <td><%= link_to 'Show', player%></td>
+        <td><%= link_to 'Show', player,  class: 'btn btn-link' %></td>
       </tr>
   <% end %>
   </tbody>
