--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
 <head>
   <title>Zadanie1</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true
+  %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -14,7 +15,8 @@
 
 
 
-    <nav class="navbar navbar-default">
+
+      <%= nav_bar do %>
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -43,7 +45,8 @@
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
-    </nav>
+    <% end %>
+    <!--</nav>-->
 
 
   <%= content_tag :div, class: 'row' do %>
