--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,41 +12,14 @@
 
 
 <%= content_tag :div, class: 'container' do %>
+    <%= nav_bar :responsive => true do%>
+        <%= menu_group do %>
+            <%= menu_item "show teams",teams_path %>
+            <%= menu_item "show events",events_path %>
+            <%= menu_item "show countries",countries_path %>
+        <% end %>
+<% end %>
 
-
-
-
-      <%= nav_bar do %>
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Zadanie1</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-
-            <li <% if params[:controller]=='teams' then %>class="active"<% end %>><a href="<%= teams_path %>">show teams
-              <% if params[:controller]=='teams' then %><span class="sr-only">(current)</span> <% end %></a></li>
-
-            <li <% if params[:controller]=='events' then %>class="active"<% end %>><a href="<%= events_path %>">show events
-              <% if params[:controller]=='events' then %><span class="sr-only">(current)</span> <% end %></a></li>
-
-            <li <% if params[:controller]=='countries' then %>class="active"<% end %>><a href="<%= countries_path %>">show countries
-              <% if params[:controller]=='countries' then %><span class="sr-only">(current)</span> <% end %></a></li>
-
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    <% end %>
-    <!--</nav>-->
 
 
   <%= content_tag :div, class: 'row' do %>
